[package]
name = "smash_script"
version = "0.1.0"
authors = ["blujay <the.blu.dev@gmail.com>"]
edition = "2018"

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash", branch = "l2c-values", features = ["weak_l2cvalue"] }
lua_macro = { path = "./lua-macro" }
num-traits = "0.2.14"