[package]
name = "lua_macro"
version = "0.1.0"
authors = ["blu-dev <the.blu.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
# skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
# libc = "0.2.82"
# skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }

[lib]
proc-macro = true